2022-xx-xx 4.3.0

	General improvements:

	all : optimize `.bind` for instance methods (#10737)

2021-03-06 4.2.5:

	New features:

	php : support PHP attributes generation (#9964)

	Bugfixes:

	all : fixed compiler crash in complex constraints chains (#10445)
	all : fixed timers execution order for timers with small time delta (#10567)
	js : fixed constructors with rest arguments when compiling for ES3, ES5 (#10490)
	php : excluded E_DEPRECATED notices from error reporting (#10502)
	php : fixed safe casts to native arrays (#10576)
	nullsafety : fixed false error on extern var fields without initialization (#10448)

2021-10-22 4.2.4:

	New features:

	hl : add clipboard support in hl 1.12 (#10320)

	General improvements:

	all : improved error messages upon directory creation failures (#10361)
	eval : added `%` operator to `eval.numbers.Int64` and `eval.numbers.UInt64` (#10411)

	Bugfixes:

	all : fixed errors on final vars modification with `+=`, `*=` etc operations (#10325)
	all : fixed hanging of MainLoop.add on threaded targets (#10308, #10329)
	all : fixed compiler crash when resolving overloads with not enough arguments (#10434)
	all : fixed non-static `@:to` methods on `@:multiType` abstracts (#10145)
	analyzer : fixed analyzer on overloads (#10405)
	analyzer : fixed issues with fields initialization expressions (#10405)
	display : improved code completion in anonymous objects declarations (#10414)
	js : fixed IntMap for keys greater than 2^31 (#10316)
	js : workaround to fix sourcemaps on Firefox in Windows (#10217)
	js : delayed truncation of the output file on `Compiler.setCustomJSGenerator` (#10387)
	cs/java : fixed rest arguments for cases when only one argument is provided (#10315)
	php : fixed type of `php.db.PDO.ATTR_DRIVER_NAME` (#10319)
	eval : fixed signature of `eval.luv.Tcp.noDelay` method
	lua : fixed `string.length` when `string` has type of a type parameter constrained to `String` (#10343)