@@ -1,0 +1,12 @@
+function _hx_handle_error(obj)
+    if obj.value then
+        _G.print("runtime error:\n " .. _hx_tostring(obj.value));
+    else
+        _G.print("runtime error:\n " .. tostring(obj));
+    end
+
+    if _G.debug and _G.debug.traceback then
+        _G.print(_G.debug.traceback());
+    end
+    _G.os.exit(1)
+end
